# elf-kit

./: Cargo.toml  README.md  todo.md
elf/: Cargo.toml
elf/src/: block.rs  lib.rs  phdr.rs  section.rs  segment.rs  shdr.rs  shrd.rs
elf_editor/: Cargo.toml
elf_editor/src/: lib.rs
src/: main.rs
test/: 1.dump  2.dump  3.dump  4.dump  5.dump  libfoo  test.c  test1.c  testBin  testBin.new  testBin.test  testBin2
